# InpReader

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
examples/: plyta+rama.inp  plytka.inp  ramka.inp
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  color.h  main.cpp
src/inpreader/: CMakeLists.txt  assembly.h  basic.h  boundary.h  cload.h  dload.h  element.h  elementset.h  material.h  model.cpp  model.h  node.cpp  node.h  parser.cpp  parser.h  settings.h  step.h  surface.h  tokenizer.cpp  tokenizer.h
src/inpreader/keywords/: amplitude.cpp  amplitude.h  assembly.cpp  assembly.h  basekeyword.cpp  basekeyword.h  boundary.cpp  boundary.h  cload.cpp  cload.h  density.cpp  density.h  dsload.cpp  dsload.h  dynamic.cpp  dynamic.h  elastic.cpp  elastic.h  element.cpp  element.h  elementset.cpp  elementset.h  heading.cpp  heading.h  instance.cpp  instance.h  keyword.cpp  keyword.h  material.cpp  material.h  node.cpp  node.h  nodeset.cpp  nodeset.h  part.cpp  part.h  preprint.cpp  preprint.h  static.cpp  static.h  (+6 more)
src/inpreader/tokens/: comment.cpp  comment.h  dataline.cpp  dataline.h  keyword.cpp  keyword.h  token.cpp  token.h
